REFRACTOR: index.html

--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
 </head>
 <body>
 
-    <div class="converter-container">
+<div class="converter-container">
 
-        <h1>Unit Converter</h1>
+    <h1>Unit Converter</h1>
 
-        <div class="tabs">
+    <div class="tabs">
         <span class="tab active" data-type="length">Length</span>
         <span class="tab" data-type="weight">Weight</span>
         <span class="tab" data-type="temperature">Temperature</span>
     </div>
 
-       <form class="converter-form">
+    <form class="converter-form">
 
         <label id="input-label">Enter the length to convert</label>
         <input type="number" id="valueInput">
@@ -32,8 +32,8 @@
 
     </form>
 
+</div>
 
-    </div>
-
+<script src="script.js"></script>
 </body>
 </html>
